[tool.poetry]
name = "natanalexandre5na"
version = "0.1.0"
description = "Projeto feito na UniFecaf para fins Educacionais"
authors = ["Natan Alexandre Braz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
pandas = "^2.2.2"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
plotly = "^5.23.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
